--- a/guide/css/guide.css
+++ b/guide/css/guide.css
@@ -419,6 +419,7 @@ body {
     width: 100%;
     height: 100%;
     border: 5px solid rgb(51, 102, 153, 0.5);
+    overflow-y: auto;
 }
 
 .preview-mode .noti-box .box-cont>h3 {
