--- a/css/module.css
+++ b/css/module.css
@@ -412,18 +412,18 @@
 
 /* tab menu */
 
-[data-role="tab"] {
+.tabs01 {
     margin: 0 0 30px 0;
 }
 
-[data-role="tab"] .area-tab-mnu {
+.tabs01 .area-tab-mnu {
     display: flex;
     justify-content: flex-start;
     align-content: center;
     position: relative;
 }
 
-[data-role="tab"] .area-tab-mnu:after {
+.tabs01 .area-tab-mnu:after {
     content: "";
     border-bottom: 1px solid #6c757d;
     position: absolute;
@@ -431,7 +431,7 @@
     width: 100%;
 }
 
-[data-role="tab"] .area-tab-mnu li {
+.tabs01 .area-tab-mnu li {
     position: relative;
     z-index: 1;
     color: #666;
@@ -444,7 +444,7 @@
     flex: 0 0 auto;
 }
 
-[data-role="tab"] .area-tab-mnu li a {
+.tabs01 .area-tab-mnu li a {
     padding: 10px 20px;
     min-height: 25px;
     display: inline-flex;
@@ -453,7 +453,7 @@
     align-items: center;
 }
 
-[data-role="tab"] .area-tab-mnu li.active {
+.tabs01 .area-tab-mnu li.active {
     background: #fff;
     color: #000;
     border: 1px solid #000;
@@ -462,7 +462,7 @@
     box-shadow: 1.5px -1.5px 2px rgb(0 0 0 / 20%);
 }
 
-[data-role="tab"] .area-tab-cont {
+.tabs01 .area-tab-cont {
     margin: 10px;
 }
 
@@ -881,15 +881,8 @@ select::-ms-expand {
     background-color: #fff;
 }
 
-
-/* 
-.select:invalid,
-.select [disabled] {
-    color: #a5afaf;
-} */
-
 .select:required option {
-    color: #000;
+    color: #000 !important;
 }
 
 .select:required option[value=""] {
@@ -1138,7 +1131,8 @@ select::-ms-expand {
 
 /* input */
 
-.ipt {
+.ipt,
+.ipt[data-state] {
     display: inline-block;
     width: 100%;
     padding: 0.2666rem 0.8rem;
@@ -1161,6 +1155,7 @@ select::-ms-expand {
 .ipt:hover:not(:disabled),
 .select:hover {
     box-shadow: 0 0px 3px 1px rgb(0 0 0 / 10%);
+    border: 1px solid #000;
 }
 
 .ipt:disabled,
@@ -1169,12 +1164,12 @@ select::-ms-expand {
     opacity: 1;
 }
 
-.ipt.state-success {
+.ipt[data-state='success'] {
     color: var(--emp-st);
     border-color: var(--emp-st);
 }
 
-.ipt.state-fail {
+.ipt[data-state='fail'] {
     color: var(--emp-nd);
     border-color: var(--emp-nd);
 }
@@ -1183,7 +1178,7 @@ select::-ms-expand {
 /* input type : file */
 
 .ipt-file {
-    display: inline-block;
+    display: flex;
 }
 
 .ipt-file:after {
@@ -1204,12 +1199,10 @@ select::-ms-expand {
 }
 
 .ipt-file .file-label {
-    display: inline-block;
-    float: left;
-    min-width: 98px;
+    flex: 0 1 auto;
     height: 40px;
-    margin-left: 10px;
-    padding: 0 5px;
+    padding: 0 20px;
+    margin-left: auto;
     background-color: #555;
     font-weight: bold;
     font-size: 15px;
@@ -1221,7 +1214,6 @@ select::-ms-expand {
 }
 
 .ipt-file .file-name {
-    float: left;
     height: 40px;
     background: #fff;
     border: 1px solid #ccc;
@@ -1230,10 +1222,13 @@ select::-ms-expand {
     text-indent: 5px;
     vertical-align: top;
     box-sizing: border-box;
+    flex: 1;
+    margin-right: 5px;
 }
 
-.file-focus {
-    outline: 1px dotted #d2310e;
+.ipt-file .active {
+    outline: 2px dotted #808080;
+    outline: auto -webkit-focus-ring-color;
 }
 
 
@@ -1810,6 +1805,28 @@ select::-ms-expand {
     top: -2px;
     border: inherit;
     transform: rotate(65deg);
+}
+
+.page-top {
+    position: fixed;
+    /* display: none; */
+    bottom: -60px;
+    right: 10px;
+    transition-duration: 0.1s;
+}
+
+.page-top.active {
+    bottom: 10px;
+    transform: scale(1, 1);
+}
+
+.page-top button {
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
+    border-radius: 50%;
 }
 
 .test-looping {
