--- a/guide/css/guide.css
+++ b/guide/css/guide.css
@@ -72,7 +72,7 @@ body {
     float: right;
     position: relative;
     z-index: 1;
-    /* display: none; */
+    display: none;
 }
 
 .guide .guide-gnb section:after {
@@ -85,7 +85,7 @@ body {
     list-style: none;
     float: left;
     display: inline-block;
-    padding: 5px 8px;
+    padding: 5px 16px;
     font-size: 12px;
     font-weight: 700;
     margin-right: -1px;
@@ -99,7 +99,7 @@ body {
 
 .guide .guide-gnb section span.on {
     background: #00a2b3;
-    color: #00ebff;
+    color: #fff;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
     -webkit-font-smoothing: antialiased;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05), inset 0 2px 0 rgba(0, 0, 0, 0.03);
@@ -108,11 +108,6 @@ body {
 .guide .guide-gnb section span:first-child {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    letter-spacing: 0.15em;
-}
-
-.guide .guide-gnb section span em {
-    color: #fff;
 }
 
 .guide .guide-gnb section span:last-child {
@@ -306,11 +301,28 @@ body {
     color: #fff;
     font-weight: 400;
     border-radius: 5px;
-    padding: 0 5px
+    padding: 0 5px;
+    margin-right: 5px
 }
 
 .guide .guide-contents article .scr>li .tag.tag02 {
     background-color: #d48d49
+}
+
+.guide .guide-contents article .scr>li .tag.tag03 {
+    background-color: #4995d4;
+}
+
+.guide .guide-contents article .scr>li .tag:before {
+    content: "테스트";
+}
+
+.guide .guide-contents article .scr>li .tag.tag02:before {
+    content: "테스트중";
+}
+
+.guide .guide-contents article .scr>li .tag.tag03:before {
+    content: "테스트완료";
 }
 
 .guide .guide-contents article .scr>li:first-child {
@@ -603,15 +615,7 @@ body {
     width: auto;
     border: 0;
     text-align: left;
-    padding: 7px 0 7px 7px;
-}
-
-.type-smart .frt_tbl td:after {
-    content: " >";
-}
-
-.type-smart .frt_tbl td:first-child:after {
-    content: "";
+    padding: 7px 10px 7px 7px;
 }
 
 .type-smart .frt_tbl td.link {
