--- a/css/module.css
+++ b/css/module.css
@@ -77,13 +77,13 @@
 
 /* alternative text [replace] */
 
-.hide {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-    font-size: 0;
-    line-height: 0;
-    opacity: 0;
+.a11y-hide {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    clip-path: polygon(0 0, 0 0, 0 0);
 }
 
 
@@ -137,44 +137,36 @@
 
 /* div. section */
 
-.top-sec {
+.sec {
     position: relative;
     padding: 30px 0;
-    width: 1080px;
-    margin: 0 auto;
-    line-height: 1;
+    margin: 30px 0;
+    width: 100%;
+    background-color: #efefef;
+    box-sizing: border-box;
 }
 
-.top-sec:after {
+.sec:after {
     content: "";
     display: block;
     clear: both;
 }
 
-.top-sec h1 {
+.sec h1 {
     width: 160px;
     height: 30px;
     float: left;
 }
 
-.top-sec .account-state {
-    float: left;
-    margin-left: 20px;
-    font-size: 13px;
-    line-height: 30px;
-    border: 1px solid #dcdcdc;
-    border-radius: 2px;
-    height: 30px;
-    box-sizing: border-box;
-}
-
 .wide-sec {
     background-color: #aaa;
+    margin: 0 -30px
 }
 
 .in-sec {
     width: 1080px;
-    margin: 35px auto;
+    margin: 30px 0;
+    padding: 30px;
     box-sizing: border-box;
 }
 
@@ -188,14 +180,6 @@
 
 .in-sec.no-mar {
     margin: 0 auto;
-}
-
-.in-sec.by-minus .result-text {
-    font-size: 15px;
-}
-
-.in-sec.by-minus .result-text .num {
-    color: #0070c0;
 }
 
 .wide-sec.in-pad {
@@ -214,28 +198,12 @@
 
 /* inquiry null */
 
-.no-data-box {}
+.not-found {}
 
 
 /* footer */
 
 #footer {}
-
-
-/* error */
-
-.only-contents #header .in-sec {
-    padding-bottom: 10px;
-    border-bottom: 1px solid #d7d7d7;
-    margin-top: 100px;
-}
-
-.only-contents #footer {
-    border-top: 0;
-}
-
-
-/* accessbility */
 
 
 /* skip navigation */
@@ -1062,6 +1030,25 @@ select::-ms-expand {
     width: 100%;
 }
 
+.type-underline-solid {
+    padding: 5px;
+    text-decoration: none;
+    background-image: linear-gradient(to right, rgb(226, 226, 14) 0, rgb(103, 156, 18) 100%);
+    background-position: 0 0;
+    background-size: 0 100%;
+    background-repeat: no-repeat;
+    transition: background .3s;
+    border: 0;
+}
+
+.type-underline-solid:hover {
+    background-size: 100% 100%;
+    color: #fff;
+    transition-duration: 0.5s;
+}
+
+.type-underline-solid:hover::before {}
+
 .type-ico {
     position: relative;
 }
@@ -1073,7 +1060,7 @@ select::-ms-expand {
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 100%;
     display: inline-block;
 }
@@ -1813,6 +1800,7 @@ select::-ms-expand {
     bottom: -60px;
     right: 10px;
     transition-duration: 0.1s;
+    z-index: 10;
 }
 
 .page-top.active {
