--- a/guide/css/guide.css
+++ b/guide/css/guide.css
@@ -72,7 +72,7 @@ body {
     float: right;
     position: relative;
     z-index: 1;
-    display: none;
+    /* display: none; */
 }
 
 .guide .guide-gnb section:after {
@@ -85,7 +85,7 @@ body {
     list-style: none;
     float: left;
     display: inline-block;
-    padding: 5px 16px;
+    padding: 5px 10px;
     font-size: 12px;
     font-weight: 700;
     margin-right: -1px;
@@ -95,10 +95,11 @@ body {
     position: relative;
     cursor: pointer;
     border: 1px solid #333;
+    cursor: default;
 }
 
 .guide .guide-gnb section span.on {
-    background: #00a2b3;
+    background: #ff7703;
     color: #fff;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
     -webkit-font-smoothing: antialiased;
