--- a/css/module.css
+++ b/css/module.css
@@ -48,6 +48,7 @@
     --size-large: 1.25rem;
     --size-huge: 2rem;
     --time-hover: 0.25s;
+    --opacity: 0.3;
     --emp-increase: #e30000;
     --emp-decrease: #00f;
     --emp-white: #fff;
